--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -8,9 +8,10 @@ body {
     background-size: cover;
 }
 
+/* 登录框大盒子 */
 .loginAndRegBox {
-    width: 310px;
-    height: 400px;
+    width: 400px;
+    height: 310px;
     background-color: #fff;
     position: absolute;
     left: 50%;
@@ -18,8 +19,40 @@ body {
     transform: translate(-50%, -50%);
 }
 
+/* 登录框的标题盒子 */
 .title-box {
     height: 60px;
     background: url("../images/login_title.png") no-repeat center;
 
+}
+
+.reg-box {
+    display: none
+}
+
+.layui-form {
+    padding: 0 30px;
+}
+
+.links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.links a {
+    font-size: 12px;
+}
+
+.layui-form-item {
+    position: relative;
+}
+
+.layui-icon {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.layui-input {
+    padding-left: 32px;
 }
